Update if statement for quotations

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -39,7 +39,7 @@
   <div class="row">
     <h2>Fun Quotes</h2>
     <ul>
-      {% for q in quotes %}
+      {% for q in quotations %}
       <li>{{ q.quote }}</li>
       {% endfor %}
     </ul>
