Add Home html text

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% block content %}
 
 <div class="container">
   <h2>Who are we ?</h2>
@@ -46,4 +48,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock content %}
