Updated image template

--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -7,7 +7,7 @@
 
     {% for book in book_list %}
     <div>
-        <img src="{{ book.images.url }}" alt="" />
+        <img src="{{ book.image }}" alt="" />
         <h3>{{ book.title }}</h3>
         <p>{{ book.excerpt }}</p>
         <p>{{ book.biography }}</p>
