--- a/book/templates/book/book_details.html
+++ b/book/templates/book/book_details.html
@@ -3,13 +3,13 @@
 <div>
     <header>
         <h1>Create Your Book</h1>
+        <h3>Please note that once you have created the title, excerpt and biography it can not be changed.</h3>
     </header>
 
     <!-- Form for Book details -->
     <div>
         <form method="post" enctype="multipart/form-data" id="bookCreationForm">
             {% csrf_token %} {{ form.as_p }}
-
             <button type="submit" id="submitAndNext">
                 Next
             </button>
