Add book title template as alt

--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -6,7 +6,7 @@
     </header>
 
     <div>
-        <img src="{{ latest_book.image }}" alt="" />
+        <img src="{{ latest_book.image }}" alt="{{ book.title }}" />
         <h3>{{ latest_book.title }}</h3>
         <p>{{ latest_book.excerpt }}</p>
         <p>{{ latest_book.biography }}</p>
