--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -8,15 +8,14 @@
     <div class="row">
         <h3><a href="{% url 'book_details' %}">Create new book</a></h3>
     </div>
+    
     {% if user == request.user %}
     <div class="row">  
         <p><strong>Books you've written:</strong></p>
         {% for book in user_books %}
-            <a href="{% url 'book_view' book_slug%}">
+            <a href="{% url 'book_view' book.slug %}">
                 <div class="row">
-                    {% if book.image %}
                         <img src="{{ book.image.url }}" alt="{{ book.title }}">
-                    {% endif %}
                     <p><strong>{{ book.title }}</strong></p>
                     <p>{{ book.excerpt }}</p>
                 </div>
@@ -26,7 +25,7 @@
 
     <div class="row">
         <p>Wishlist</p>
-        <a href="{% url 'wishlist_view' %}">View Wishlist</a>
+        <a href="#">View Wishlist</a>
     </div>
     {% endif %}
 
