--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -8,7 +8,7 @@
       
     {% for book in book_list %}
     <div>
-        <img src="{{ book.image | safe }}" alt="" />
+        <img src="{{ book.image }}" alt="{{ book.title }}" />
         <h3>{{ book.title | safe }}</h3>
         <p>{{ book.excerpt | safe }}</p>
         <button><a href="{% url 'book_view' book.slug %}">View book</a></button>
