--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} {% url 'home' as home_url %} {% url 'about' as about_url %} {% url 'account_login' as login_url %}
+{% load static %} {% url 'home' as home_url %} {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %} {% url 'account_logout' as logout_url %}
 
 <!DOCTYPE html>
@@ -27,20 +27,20 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Inkpad</a>
+      <a class="navbar-brand" href="{{ home_url }}">Inkpad</a>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link {% if request.path == home_url %}act" aria-current="page{% endif %}" href="#">Home</a>
+            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}" href="{{ home_url }}">Home</a>
           </li>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.path == browse_url %}active" aria-current="page{% endif %}"
-              href="#">Browse</a>
+              href="{% url 'browse' %}">Browse</a>
           </li>
           <li>
-            <a href="#">{% if user.is_authenticated %}
-              <p class="text-end m-3"><a href="#">{{ user }}</a></p>
+            <a href="{% url 'profile' %}">{% if user.is_authenticated %}
+              <p class="text-end m-3">{{ user }}</p>
               {% else %}
               <p class="text-end m-3">You are not logged in</p>
               {% endif %}
