--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -3,49 +3,59 @@
 {% block content %}
 
 <div class="container">
-  <h2>Who are we ?</h2>
-  <p>
-    We are Inkpad, an online website for upcoming authors. We give unpublished
-    and even published authors the oppurtunity to show the world whats in their
-    mind.
-  </p>
-  <br />
-  <p>
-    We allow people to express themself with no limits (shout out to the ones
-    who write freaky books). But it's not just for those who wants to write,
-    Inkpad is for those who love to read.
-  </p>
-</div>
-<div class="row">
-  <h2>Why did we make this website?</h2>
-  <p>
-    Wattpad is no longer free, and since it's not I'm making my own version!
-  </p>
-  <br />
-  <p>One a more serious note...</p>
-  <p>
-    When I was younger I used to read Wattpad until 3/4am because I could never
-    afford to actually buy books (perks of being 13 with no job). So to see that
-    they are charging, upsets me because my love for books started with Wattpad.
-    So to charge for it stops the next generation having that same love.
-  </p>
   <div class="row">
-    <h2>Fun Facts</h2>
-    <ul>
-      {% for f in fun_facts %}
-      <li>{{ f.facts }}</li>
-      {% endfor %}
-    </ul>
-  </div>
+    <h2>About us</h2>
+    <br>
+    <h3>Whats the purpose?</h3>
+    <p>
+      We are Inkpad, an online website for upcoming authors. We give unpublished
+      and even published authors the oppurtunity to show the world whats in their
+      mind. We allow people to express themself with no limits (shout out to the ones
+      who write freaky books). But it's not just for those who wants to write,
+      Inkpad is for those who love to read.
+    </p>
+    <br />
+    <h3>Why make the website?</h3>
+    <p>
+      I'm gald you asked. Wattpad is no longer free, and since it's not I'm making my own version!
+    </p>
+    <p>
+      On a more serious note... When I was younger I used to read Wattpad until 3/4am because I could never
+      afford to actually buy books (perks of being 13 with no job). So to see that
+      they are charging, upsets me because my love for books started with Wattpad.
+      So to charge for it stops the next generation having that same love.
+    </p>
 
-  <div class="row">
-    <h2>Fun Quotes</h2>
-    <ul>
-      {% for q in quotations %}
-      <li>{{ q.quote }}</li>
-      {% endfor %}
-    </ul>
+    <div class="row">
+      <h4>Lets get you started then shall we?</h4>
+      {% if user.is_authenticated %}
+        <button><a href="{% url 'browse' %}">Browse books</a></button>
+        <button><a href="{% url 'book_details' %}">Create a book</a></button>
+      {% else %}
+        <button><a href="{% url 'account_signup' %}">Log in </a></button>
+      {% endif %}
+    </div>
+  
+
+
+    <div class="row">
+      <h2>Fun Facts</h2>
+      <ul>
+        {% for fun in fun_facts %}
+        <li>{{ fun.facts }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <div class="row">
+      <h2>Fun Quotes</h2>
+      <ul>
+        {% for q in quotations %}
+        <li>{{ q.quote }}</li>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
 </div>
 
-{% endblock content %}
+  {% endblock content %}
