Refactor fun_facts template

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -42,7 +42,7 @@
       <h2>Fun Facts</h2>
       <ul>
         {% for fun in fun_facts %}
-        <li>{{ fun.facts }}</li>
+        <li>{{ fun.fact }}</li>
         {% endfor %}
       </ul>
     </div>
