--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -6,11 +6,11 @@
     </header>
 
     <div>
-        <img src="{{ latest_book.image }}" alt="{{ book.title }}" />
+        <img src="{{ latest_book.image }}" alt="{{ latest_book.title }}" />
         <h3>{{ latest_book.title }}</h3>
         <p>{{ latest_book.excerpt }}</p>
         <p>{{ latest_book.biography }}</p>
-        <button><a href="#">Edit Book</a></button>
+        <button><a href="{% url 'edit_chapter' book_slug=latest_book.slug pk=chapter.pk %}">Edit chapter</a></button>
         <button><a href="{% url 'add_chapter' book_slug=latest_book.slug %}">Add another chapter</a></button>
     </div>
 </div>
