--- a/browse/templates/browse/book_view.html
+++ b/browse/templates/browse/book_view.html
@@ -1,25 +1,25 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
+
     <div>
-        <img src="{{ book.image }}" alt="{{ book.title }}" />
-        <h3>{{ book.title | safe }}</h3>
-        <p>{{ book.biography | safe }}</p>
+
+        <img src="{{ book_view.image }}" alt="{{ book_view.title }}" />
+        <h3>{{ book_view.title | safe }}</h3>
+        <p>{{ book_view.biography | safe }}</p>
         <!-- <button><a href="{% url 'browse' %}">Back</a></button> -->
         {% if user.is_authenticated %}
             <button><a href="#">Read now</a></button>
             <button><a href="#">Add to Wishlist</a></button>
-            {% if user == request.user %}
-            <button><a href="{% url 'add_chapter' book_slug=book.slug %}">Add a chapter</a></button>
-            <button><a href="#">View Chapters</a></button>
-            <button>Delete book</button>
+            {% if book.author == request.user %}
+            <button><a href="{% url 'add_chapter' book_view.slug %}">Add a chapter</a></button>
+            <button><a href="#"></a>Delete book</button>
             {% endif %}
+            <button><a href="{% url 'view_book_chapters' book_view.slug %}">View Chapters</a></button>
 
         {% else %}
         <!-- Content to display if the user is not logged in -->
         {% endif %}
 
-        
     </div>
-</div>
 
 {% endblock %}
