--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -3,6 +3,13 @@
 {% block content %}
 
 <div class="container">
+  {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+  {% endif %}
   <div class="row">
     <h2>About us</h2>
     <br>
@@ -56,6 +63,7 @@
       </ul>
     </div>
   </div>
+
 </div>
 
   {% endblock content %}
