--- a/browse/templates/browse/view_chapter.html
+++ b/browse/templates/browse/view_chapter.html
@@ -5,7 +5,10 @@
 
     {% for chapter in object_list %}
         <div>
-            <h5>Chapter: {{ chapter.chapter }} - <a href="{% url 'edit_book_chapter' book_slug=book.slug pk=chapter.pk %}">Edit</a> - <a href="#">Delete</a></h5>
+            <h5>Chapter: {{ chapter.chapter }} - 
+                <a href="{% url 'edit_book_chapter' book_slug=book.slug pk=chapter.pk %}">
+                    Edit</a> - 
+                    <a href="{% url 'delete_book_chapter' book_slug=book.slug pk=chapter.pk %}">Delete</a></h5>
             <p>{{ chapter.content }}</p>
             <!-- Add more details about each chapter here -->
         </div>
