(browse/templates/browse/edit_chapter.html):Refactor button to update

--- a/browse/templates/browse/edit_chapter.html
+++ b/browse/templates/browse/edit_chapter.html
@@ -10,7 +10,7 @@
       {% csrf_token %} {{ form.as_p }}
       <button
         type="submit">
-        Update chapter
+        Update
       </button>
     </form>
   </div>
