--- a/book/templates/book/edit_chapter.html
+++ b/book/templates/book/edit_chapter.html
@@ -10,7 +10,7 @@
       {% csrf_token %} {{ form.as_p }}
       <button
         type="submit">
-        Update chapter
+        Update
       </button>
     </form>
   </div>
