--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,9 +24,17 @@
     </div>
 
     <div class="row">
-        <p>Wishlist</p>
-        <a href="#">View Wishlist</a>
+        <h4>Books currently reading:</h4>
+        <p>Books reading</p>
+        <button><a href="">continue reading</a></button>
     </div>
+
+    <div class="row">
+        <p>Wishlist</p>
+       <button><a href="#">View Wishlist</a></button>
+    </div>
+
+    
     {% endif %}
 
     
