(profiles/profile.html):change button name for bookmarks

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -31,7 +31,7 @@
 
     <div class="row">
         <p>Wishlist</p>
-       <button><a href="{% url 'bookmarked' %}">View Wishlist</a></button>
+       <button><a href="{% url 'bookmarked' %}">View Bookmarks</a></button>
     </div>
 
     
