--- a/browse/templates/browse/book_view.html
+++ b/browse/templates/browse/book_view.html
@@ -1,38 +1,41 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-
-
-    <div>
-
-        <img src="{{ book_view.image }}" alt="{{ book_view.title }}" />
-        <h3>{{ book_view.title | safe }}</h3>
-        <p>{{ book_view.synopsis | safe }}</p>
-        {% if user.is_authenticated %}
+<!-- Image head re-size -->
+<div class="container-fluid w-75">
+    <div class="card text-center">
+        <div class="card-header">
+            <img src="{{ book_view.image.url }}" alt="{{ book_view.title }}" />
+        </div>
+        <div class="card-body">
+            <h3>{{ book_view.title | safe }}</h3>
+            <p>{{ book_view.synopsis | safe }}</p>
+            {% if user.is_authenticated %}
             <button><a href="#">Read now</a></button>
             {% if book_view.author == request.user %}
-                <button><a href="{% url 'add_chapter' book_view.slug %}">Add a chapter</a></button>
-                <button><a href="{% url 'edit_book' book_view.slug book_view.pk %}">Edit book details</a></button>
-                <button><a href="{% url 'delete_book' book_view.slug %}">Delete book</a></button>
+            <button><a href="{% url 'add_chapter' book_view.slug %}">Add a chapter</a></button>
+            <button><a href="{% url 'edit_book' book_view.slug book_view.pk %}">Edit book details</a></button>
+            <button><a href="{% url 'delete_book' book_view.slug %}">Delete book</a></button>
             {% endif %}
             <button><a href="{% url 'view_book_chapters' book_view.slug %}">View Chapters</a></button>
-            
+
             <form action="{% url 'bookmark_book' slug=book_view.slug %}" method="POST">
                 {% csrf_token %}
                 {% if bookmarked %}
                 <!-- When font awesome is installed correctly -->
                 <!-- <i class="fa-regular fa-bookmark" type="submit" name="book_id" value="{{ book.id }}"></i> -->
-                    <button type="submit" name="book_id" value="{{ book_view.id }}" class="btn btn-danger">UnBookmark</button>
+                <button type="submit" name="book_id" value="{{ book_view.id }}" class="btn btn-danger"><i
+                        class="fa-solid fa-bookmark"></i></button>
                 {% else %}
-                    <button type="submit" name="book_id" value="{{ book_view.id }}" class="btn btn-primary">Bookmark</button>
+                <button type="submit" name="book_id" value="{{ book_view.id }}" class="btn btn-primary"><i
+                        class="fa-regular fa-bookmark"></i></button>
                 {% endif %}
             </form>
-            
-            
-
-        {% else %}
-        <!-- Content to display if the user is not logged in -->
-        {% endif %}
-
+        </div>
     </div>
+</div>
+
+{% else %}
+<!-- Content to display if the user is not logged in -->
+{% endif %}
 
 {% endblock %}
