--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -16,7 +16,7 @@
     <div class="row">
         {% for book in book_list %}
         <div class="col-sm-4 mb-3 text-center">
-            <div class="card">
+            <div class="card h-100">
                 <div class="card-body">
                     <img src="{{ book.image.url }}" alt="{{ book.title }}" class="card-img-top">
                     <h5 class="card-title">{{ book.title | safe }}</h5>
