--- a/book/templates/book/delete_book.html
+++ b/book/templates/book/delete_book.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-<body>
-  <header>
-    <h3>Delete {{ book.title }}</h3>
-  </header>
 
-  <div>
-    <form method="post">
-      {% csrf_token %}
-        <strong>Are your sure?</strong>
-        <p>This is permenant!</p>
-      <button
-        type="submit">
-        Delete
-      </button>
-    </form>
-    
-        
+  <div class="container">
+
+    <br>
+    <div class="card text-center">
+      <h4 class="card-header">Delete {{ chapter.title }} book </h4>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}
+          <h5 class="card-title">Are you sure you want to delete this book?</h5>
+          <p class="card-text">It will be gone <strong>FOREVER!</strong></p>
+          <button
+            type="submit">
+            Delete book
+          </button>
+        </form>
+      </div>
+    </div>
+    <br>
+  
   </div>
 
-
   {% endblock content %}
-</body>
