--- a/book/templates/book/delete_chapter.html
+++ b/book/templates/book/delete_chapter.html
@@ -1,25 +1,24 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-<body>
-  <header>
-    <h1>Delete {{ chapter.title }} chapter </h1>
-    <h3>Delete {{ chapter.title }}</h3>
-  </header>
+<div class="container">
 
-  <div>
-    <form method="post">
-      {% csrf_token %}
-        <strong>Are your sure?</strong>
-        <p>This is permenant!</p>
-      <button
-        type="submit">
-        Delete chapter
-      </button>
-    </form>
-    
-        
+  <br>
+  <div class="card text-center">
+    <h4 class="card-header">Delete {{ chapter.title }} chapter </h4>
+    <div class="card-body">
+      <form method="post">
+        {% csrf_token %}
+        <h5 class="card-title">Are you sure you want to delete this chapter</h5>
+        <p class="card-text">It will be gone <strong>FOREVER</strong></p>
+        <button
+          type="submit">
+          Delete chapter
+        </button>
+      </form>
+    </div>
   </div>
+  <br>
 
+</div>
 
-  {% endblock content %}
-</body>
+{% endblock content %}
