--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -1,18 +1,22 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-<div>
-    <header>
-        <h1>Your book has been published!</h1>
-    </header>
-        <div>
-            <img src="{{ books.image }}" alt="{{ books.title }}" />
-            <h3>{{ books.title | safe }}</h3>
-            <p>{{ books.excerpt | safe }}</p>
-            <p>{{ books.synopsis | safe }}</p>
+<header class="d-flex justify-content-center">
+    <h2>Your book has been published!</h2>
+</header>
+<br>
+<div class="container d-flex justify-content-center">
+    <div class="card" style="width: 30rem;">
+        <img src="{{ books.image.url }}" class="card-img-top" alt="{{ books.title }}">
+        <div class="card-body text-center">
+          <h3 class="card-title">{{ books.title | safe }}</h3>
+            <p class="card-text">{{ books.excerpt | safe }}</p>
+            <p class="card-text">{{ books.synopsis | safe }}</p>
             <button><a href="{% url 'add_chapter' book_slug=books.slug %}">Add a chapter</a></button>
             <button><a href="{% url 'edit_book' slug=books.slug pk=books.pk %}">Edit book details</a></button>
             <button><a href="{% url 'delete_book' slug=books.slug %}">Delete book</a></button>
         </div>
+      </div>
 </div>
+<br>
 
 {% endblock content %}
