--- a/templates/base.html
+++ b/templates/base.html
@@ -13,83 +13,181 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet" />
 
-  <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <!-- <script src="https://kit.fontawesome.com/d5e5e3db0c.js" crossorigin="anonymous"></script> -->
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+  <!-- Bootstrap Install CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 </head>
 
-<body class="d-flex flex-column h-100 main-bg">
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ home_url }}">Inkpad</a>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}" href="{{ home_url }}">Home</a>
-          </li>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
+              href="{{ home_url }}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.path == browse_url %}active" aria-current="page{% endif %}"
               href="{% url 'browse' %}">Browse</a>
           </li>
-          <li>
-            <a href="{% url 'profile' %}">{% if user.is_authenticated %}
-              <p class="text-end m-3">{{ user }}</p>
-              {% else %}
-              <p class="text-end m-3">You are not logged in</p>
-              {% endif %}
+          <li class="nav-item dropdown">
+            <button class="nav-link dropdown-toggle dropdown-toggle-split" role="button" data-toggle="dropdown"
+              aria-expanded="false">
               {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
-                  href="{% url 'account_logout' %}">Logout</a>
-              </li>
+              {{ user }}
               {% else %}
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
-                  href="{% url 'account_signup' %}">Register</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
-                  href="{% url 'account_login' %}">Login</a>
-              </li>
+              You are not logged in
               {% endif %}
-            </a>
+              <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'profile' %}">View my profile</a>
+              <a class="dropdown-item" href="{% url 'book_details' %}">Create a book</a>
+              <a class="dropdown-item" href="{% url 'bookmarked' %}">Bookmarks</a>
+              
+            </div>
           </li>
+          <li>
+            <div class="btn-group">
+              <button type="btn btn-light button" >{% if user.is_authenticated %}
+                {{ user }}
+                {% else %}
+                You are not logged in
+                {% endif %}</button>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'profile' %}">View my profile</a></li>
+                <li><a class="dropdown-item" href="{% url 'book_details' %}">Create a book</a></li>
+                <li><a class="dropdown-item" href="{% url 'bookmarked' %}">Bookmarks</a></li>
+              </ul>
+              
+            </div>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+              href="{% url 'account_logout' %}">Logout</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+              href="{% url 'account_signup' %}">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
+              href="{% url 'account_login' %}">Login</a>
+          </li>
+          {% endif %}
+          </a>
         </ul>
       </div>
     </div>
   </nav>
-  
+
   <main class="flex-shrink-0 main-bg">
     {% block content %}
     <!-- Content Goes here -->
     {% endblock content %}
   </main>
 
+  
   <!-- Footer -->
-  <footer class="footer mt-auto py-3 dark-bg">
-    <p class="m-0 text-center text-white">
-      {% block copyright %} Made by Danille Hamilton {% endblock copyright %}
-    </p>
-    <p class="m-0 text-center text-white">
-      Follow us: <i class="fab fa-facebook-square ms-3"></i>
-      <i class="fab fa-twitter-square ms-3"></i>
-      <i class="fab fa-instagram-square ms-3"></i>
-      <i class="fab fa-youtube-square ms-3"></i>
-    </p>
+  <footer class="text-center bg-body-tertiary">
+    <!-- Grid container -->
+    <div class="container pt-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a
+          data-mdb-ripple-init
+          class="btn btn-link btn-floating btn-lg text-body m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+  
+        <!-- Twitter -->
+        <a
+          data-mdb-ripple-init
+          class="btn btn-link btn-floating btn-lg text-body m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-twitter"></i
+        ></a>
+  
+        <!-- Google -->
+        <a
+          data-mdb-ripple-init
+          class="btn btn-link btn-floating btn-lg text-body m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-google"></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a
+          data-mdb-ripple-init
+          class="btn btn-link btn-floating btn-lg text-body m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-instagram"></i
+        ></a>
+  
+        <!-- Linkedin -->
+        <a
+          data-mdb-ripple-init
+          class="btn btn-link btn-floating btn-lg text-body m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <!-- Github -->
+        <a
+          data-mdb-ripple-init
+          class="btn btn-link btn-floating btn-lg text-body m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2024 Copyright:
+      <a class="text-body" href="#">Danille Hamilton</a>
+    </div>
+    <!-- Copyright -->
   </footer>
 
   <!-- Javascript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="{% static 'js/script.js' %}"></script>
+
+  <!-- Font Awesome CSS -->
+  <script src="https://kit.fontawesome.com/d5e5e3db0c.js" crossorigin="anonymous"></script>
   {% block extras %} {% endblock %}
 </body>
 
