(browse/view_chapter.html): Bug fixes

--- a/browse/templates/browse/view_chapter.html
+++ b/browse/templates/browse/view_chapter.html
@@ -31,7 +31,7 @@
   </div>
   {% if user.is_authenticated %}
           {% if book.author == request.user %}
-          <button><a href="{% url 'add_chapter' book.slug %} btn btn-light">Add a chapter</a></button>
+          <button class="bg-warning-bg-subtle"><a href="{% url 'add_chapter' book.slug %}" >Add a chapter</a></button>
           {% endif %}
           <button><a href="#">Read now</a></button>
           {% endif %}
