--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% block content %}
 
-<div class="container">
+<div class="container-fluid">
   {% if messages %}
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -10,59 +10,105 @@
         </div>
     {% endfor %}
   {% endif %}
-  <div class="row">
-    <h2>About us</h2>
-    <br>
-    <h3>Whats the purpose?</h3>
-    <p>
-      We are Inkpad, an online website for upcoming authors. We give unpublished
-      and even published authors the oppurtunity to show the world whats in their
-      mind. We allow people to express themself with no limits (shout out to the ones
-      who write freaky books). But it's not just for those who wants to write,
-      Inkpad is for those who love to read.
-    </p>
-    <br />
-    <h3>Why make the website?</h3>
-    <p>
-      I'm gald you asked. Wattpad is no longer free, and since it's not I'm making my own version!
-    </p>
-    <p>
-      On a more serious note... When I was younger I used to read Wattpad until 3/4am because I could never
-      afford to actually buy books (perks of being 13 with no job). So to see that
-      they are charging, upsets me because my love for books started with Wattpad.
-      So to charge for it stops the next generation having that same love.
-    </p>
-
-    <div class="row">
-      <h4>Lets get you started then shall we?</h4>
-      {% if user.is_authenticated %}
-        <button><a href="{% url 'browse' %}">Browse books</a></button>
-        <button><a href="{% url 'book_details' %}">Create a book</a></button>
-      {% else %}
-        <button><a href="{% url 'account_signup' %}">Log in </a></button>
-      {% endif %}
+  <br>
+  <h4 class="text-center">From Thoughts to Pages - Inkpad is Your Space</h4>
+  <br>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
     </div>
-  
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </button>
+  </div>
+  <div class="row text-center">
+    <h4>Lets get you started then shall we?</h4>
+            {% if user.is_authenticated %}
+              <button type="button" class="btn btn-light"><a href="{% url 'browse' %}">Browse books</a></button>
+              <button type="button" class="btn btn-light"><a href="{% url 'book_details' %}">Create a book</a></button>
+            {% else %}
+              <button><a href="{% url 'account_signup' %}">Log in </a></button>
+            {% endif %}
+  </div>
 
-
-    <div class="row">
-      <h2>Fun Facts</h2>
-      <ul>
-        {% for fun in fun_facts %}
-        <li>{{ fun.fact }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-
-    <div class="row">
+        <br>
+  <div class="card text-center">
+    <div class="card-header --bs-warning-bg-subtle">
       <h2>Fun Quotes</h2>
-      <ul>
+    </div>
+    <div class="card-body">
+      <blockquote class="blockquote mb-0">
         {% for q in quotations %}
-        <li>{{ q.quote }}</li>
+        <p>{{ q.quote }}</p>
+        <footer class="blockquote-footer"><cite title="Source Title">{{ q.quote_author }}</cite></footer>
         {% endfor %}
-      </ul>
+      </blockquote>
     </div>
   </div>
+  <br>
+
+  <div class="row">
+    <h3>Whats the purpose?</h3>
+            <p>
+              We are Inkpad, an online website for upcoming authors. We give unpublished
+              and even published authors the oppurtunity to show the world whats in their
+              mind. We allow people to express themself with no limits (shout out to the ones
+              who write freaky books). But it's not just for those who wants to write,
+              Inkpad is for those who love to read.
+            </p>
+  </div>
+  <div class="row">
+    <h3>Why make the website?</h3>
+            <p>
+              I'm gald you asked. Wattpad is no longer free, and since it's not I'm making my own version!
+            </p>
+            <p>
+              On a more serious note... When I was younger I used to read Wattpad until 3/4am because I could never
+              afford to actually buy books (perks of being 13 with no job). So to see that
+              they are charging, upsets me because my love for books started with Wattpad.
+              So to charge for it stops the next generation having that same love.
+            </p>
+  </div>
+  
+  
+  <br>
+
+    <div class="card text-center --bs-warning-bg-subtle">
+      <div class="card-header">
+        <h2>Fun Facts</h2>
+      </div>
+      <div class="card-body">
+        {% for fun in fun_facts %}
+        <p>{{ fun.fact }}</p>
+        {% endfor %}
+      </div>
+      <div class="card-footer text-body-secondary">
+      </div>
+    </div>
+
+  <br>
+
+  
+    
+ 
 
 </div>
 
