--- a/book/templates/book/delete_book.html
+++ b/book/templates/book/delete_book.html
@@ -9,7 +9,7 @@
       <div class="card-body">
         <form method="post">
           {% csrf_token %}
-          <h5 class="card-title">Are you sure you want to delete this book?</h5>
+          <h5 class="card-title">Are you sure you want to delete this book and its associated chapters?</h5>
           <p class="card-text">It will be gone <strong>FOREVER!</strong></p>
           <button
             type="submit">
